removing target folder and updating pom

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -63,6 +63,7 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>main</sourceDirectory>
         <testSourceDirectory>test</testSourceDirectory>
         <plugins>
             <!-- Maven Compiler Plugin -->
@@ -99,7 +100,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.example.Main</mainClass>
+                            <mainClass>CryptoTech.ScroogeCoin.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
